@@ -1642,8 +1642,10 @@ else
             field_quotes += match.count(@quote_char)
             if field_quotes % 2 == 0
               in_quotes = current_field[@parsers[:quoted_field], 1]
-              raise MalformedCSVError if !in_quotes ||
-                                         in_quotes[@parsers[:stray_quote]]
+              if !in_quotes || in_quotes[@parsers[:stray_quote]]
+                raise MalformedCSVError,
+                      "Missing or stray quote in line #{lineno + 1}"
+              end
               current_field = in_quotes
               current_field.gsub!(@quote_char * 2, @quote_char) # unescape contents
               csv           << current_field
@@ -1653,7 +1655,7 @@ else
               current_field << @col_sep
             end
           elsif match.count("\r\n").zero?
-            raise MalformedCSVError, "Illegal quoting on line #{lineno + 1}."
+            raise MalformedCSVError, "Illegal quoting in line #{lineno + 1}."
           else
             raise MalformedCSVError, "Unquoted fields do not allow " +
                                      "\\r or \\n (line #{lineno + 1})."
