@@ -5,6 +5,7 @@ Below is a complete listing of changes for each revision of FasterCSV.
 == 1.5.5
 
 * Removed setup.rb due to licensing concerns.
+* Improved stray quoting error message (patch by Edvard Majakari).
 
 == 1.5.4
 
